[package]
name = "img_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
tokio = { version = "1.43", features = ["full"] }
tower = { version = "0.5.2", features = ["full"]}
bytes = "1.10.0"
image = "0.25.5"
imageproc = "0.25.0"
serde ={version = "1.0.217", features = ["derive"]}
serde_json = "1.0.138"
anyhow="1.0.95"
hyper={version = "1.6.0", features = ["full"]}
thiserror = "2.0.11"
